--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,13 @@
       <artifactId>hidapi</artifactId>
     </dependency>
 
+    <!-- For using usb4java with javax-usb -->
+      <dependency>
+        <groupId>org.usb4java</groupId>
+        <artifactId>usb4java-javax</artifactId>
+        <version>1.2.0</version>
+      </dependency>
+
     <!-- Bitcoinj for Bitcoin operations -->
     <dependency>
       <groupId>com.google</groupId>
